# JustBeat-DAW

./: .pre-commit-config.yaml  ARCHITECTURE.md  LICENSE  README.md  main.py  pyproject.toml
.github/workflows/: ci.yml
cache/: startup_project.jbp
config/: __init__.py  config_manager.py  settings.py
docs/: DDD.tex  ERS.tex
src/: __init__.py
src/application/: __init__.py  app_core.py  app_core_builder.py
src/application/commands/: __init__.py  command_history.py
src/application/handlers/: __init__.py  arrangement_handler.py  automation_handler.py  midi_recording_handler.py  note_handler.py  project_handler.py  recording_handler.py  state_handler.py  track_handler.py  transport_handler.py
src/application/ports/: __init__.py  audio_port.py  persistence_port.py
src/application/services/: transport_service.py
src/domain/: __init__.py  transport_state.py
src/domain/entities/: __init__.py  arrangement.py  clip.py  note.py  pattern.py  project.py  tempo_map.py  timeline.py  track.py
src/domain/events/: __init__.py  event_bus.py  midi_event.py
src/infrastructure/: __init__.py  platform.py
src/infrastructure/audio/: __init__.py  audio_engine_factory.py  audio_manager.py  audio_router.py  audio_settings.py  device_manager.py  drum_machine.py  effect_factory.py  hardware_emulation.py  instrument_rack.py  mixer_bus.py  mixer_channel.py  mixer_engine.py  multi_oscillator_synth.py  offline_renderer.py  oscillator.py  performance_monitor.py  player.py  polyphonic_synth.py  preset_manager.py  recorder.py  sampler_module.py  stream_manager.py  voice.py
src/presentation/: __init__.py
tests/: __init__.py  _check_qta.py  _test_all_icons.py  _test_alt.py  _test_deferred.py  _test_fa5r.py  _test_icons_valid.py  _test_qta_qapp.py  _test_style_loading.py  test_audio.py  test_audio_manager.py  test_commands.py  test_entities.py  test_entities_expanded.py  test_handlers.py  test_new_modules.py  test_plugin_system.py  test_services.py
(+87 files in other folders)
