[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "justbeat-daw"
version = "0.1.0"
description = "8-bit Digital Audio Workstation - A chiptune music production application"
readme = "README.md"
license = "MIT"
authors = ["JustBeat-DAW Team <team@justbeat.dev>"]
keywords = ["audio", "daw", "chiptune", "8bit", "music", "synthesizer", "midi"]
package-mode = false

[tool.poetry.dependencies]
python = ">=3.11,<3.15"
pyside6 = "^6.11.0"
sounddevice = "^0.5.5"
numpy = "^2.4.4"
mido = "^1.3.0"
python-rtmidi = {version = "^1.2.0", optional = true}
pydantic = "^2.0.0"
psutil = "^7.2.2"
soundfile = "^0.13.1"
qt-material = "^2.17"
pyqtgraph = "^0.14.0"
qtawesome = "^1.4.2"

[tool.poetry.group.dev.dependencies]
pytest = "9.0.3"
pytest-cov = "7.1.0"
pytest-asyncio = "1.3.0"
pytest-mock = "3.11.0"
black = "26.3.1"
flake8 = "^7.3.0"
mypy = "^2.1.0"
isort = "^8.0.1"

[tool.poetry.scripts]
justbeat = "main:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"

[tool.coverage.run]
source = ["src"]
omit = ["*/tests/*", "*/test_*.py"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
]

[tool.black]
line-length = 100
target-version = ["py311", "py312", "py313", "py314"]
include = '\\.pyi?$'

[tool.isort]
profile = "black"
line_length = 100

[tool.mypy]
python_version = "3.14"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
ignore_missing_imports = true
warn_redundant_casts = true
warn_unused_ignores = true
strict_equality = true

[[tool.mypy.overrides]]
module = [
    "src.presentation.*",
    "tests.*",
]
disallow_untyped_defs = false
